# cot-safepath-filter

./: .bumpversion.cfg  .dockerignore  .editorconfig  .env.example  .gitignore  .license-header.txt  .pre-commit-config.yaml  =2.0.0  =41.0.0  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_DEPLOYMENT.md  GENERATION_4_COMPLETION_REPORT.md  GENERATION_5_COMPLETION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_CHARTER.md  PROJECT_COMPLETION_SUMMARY.md  QUALITY_GATES_REPORT.md  README.md  SECURITY.md  TERRAGON_SDLC_COMPLETION_REPORT.md  autonomous_research_validation_report_20250824_072947.json  debug_buffer_test.py  debug_detector_test.py  debug_encoding_detector_test.py  debug_encoding_test.py  debug_pattern_test.py  debug_security_test.py  debug_system_prompt_test.py  debug_unicode_test.py  deployment_validation_report.json  docker-compose.dev.yml  (+39 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: README.md  ci.yml  release.yml
deployment/: production_config.py
deployment/docker/: Dockerfile  Dockerfile.production  entrypoint.sh
deployment/helm/: Chart.yaml  values.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  monitoring.yaml  namespace.yaml  service.yaml
deployment/scripts/: deploy.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
docs/: ARCHITECTURE.md  AUTONOMOUS_SDLC_ENHANCEMENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_WORKFLOWS_REQUIRED.md  GITHUB_WORKFLOWS_SETUP.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 000-template.md  001-technology-stack.md  README.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/testing/: README.md
docs/workflows/: README.md  advanced-ci-cd-templates.md  advanced-security-scan-template.yml
docs/workflows/examples/: ci.yml  security-scan.yml
examples/: global_demo.py  performance_demo.py  research_demo.py  sentiment_analysis_demo.py
monitoring/: alerting-rules.yml  alertmanager.yml  health-checks.py  metrics-collector.py
monitoring/grafana/dashboards/: safepath-overview.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
performance/: benchmark-suite.py  performance-config.yml
research/: README.md  advanced_report_20250823_071617.md  advanced_statistical_validation.py  advanced_stats_20250823_071617.json  baseline_establishment.py  comprehensive_comparative_study.py  comprehensive_research_framework.py  lightweight_report_20250823_071323.md  lightweight_research_study.py  lightweight_results_20250823_071311.json  lightweight_results_20250823_071323.json  research_validation_report.md  run_validation.py  statistical_validation.py  study_summary.json
research/datasets/: comprehensive_study_dataset.json
research/research/: advanced_report_20250823_072904.md  advanced_stats_20250823_072904.json
scripts/: backup-automation.py  build.sh  init-db.sql  scaling-automation.py
scripts/automation/: dependency-updates.py
security/: security-scanner.py
src/cot_safepath/: __init__.py  advanced_cache.py  advanced_logging.py  advanced_monitoring.py  advanced_performance.py  cli.py  concurrent_processing.py  core.py  detectors.py  enhanced_core.py  enhanced_core_v2.py  enhanced_integrations.py  error_boundaries.py  exceptions.py  failure_recovery.py  generation_2_fixed.py  generation_5_lite.py  generation_5_multimodal.py  global_deployment.py  global_deployment_enhanced.py  health_monitoring.py  high_performance_core.py  i18n_support.py  intelligent_caching.py  logging_config.py  models.py  monitoring.py  performance.py  performance_optimization.py  performance_optimizer.py  pipeline_diagnostics.py  quantum_intelligence.py  quantum_intelligence_enhanced.py  quantum_intelligence_lite.py  realtime_monitoring.py  research_algorithms.py  research_enhancements.py  research_framework.py  robust_enhanced_core.py  robust_error_handling.py  (+13 more)
src/cot_safepath/api/: __init__.py  app.py  dependencies.py  middleware.py  routes.py  schemas.py
src/cot_safepath/cache/: __init__.py  cache_strategy.py  redis_manager.py
src/cot_safepath/database/: __init__.py  connection.py  models.py  repositories.py
src/cot_safepath/database/migrations/: 001_initial_schema.sql
tests/: comprehensive_test_suite.py  conftest.py  test_enhanced_functionality.py  test_generation_2_robust.py  test_generation_3_performance.py
tests/chaos/: chaos-engineering-config.yml  resilience-test-suite.py
tests/e2e/: test_e2e_scenarios.py
tests/fixtures/: README.md  test_data.py
tests/fixtures/data/: safe_cot_samples.json
tests/integration/: test_api_integration.py
tests/load/: README.md
tests/performance/: test_latency_benchmarks.py  test_performance.py
tests/security/: test_security.py  test_security_validation.py
tests/unit/: test_core_filtering.py  test_detectors.py  test_exceptions.py  test_models.py  test_placeholder.py  test_sentiment_analysis.py  test_utils.py
tests/utils/: __init__.py  test_helpers.py
